Created playground file and fixed cross_entropy function.

--- a/entrance_coding/experiments.ipynb
+++ b/entrance_coding/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,6 +823,28 @@
     "a = np.array([1, 2, 3 ,4, 5, 6, 7, 8, 9, 0])\n",
     "mask = np.random.rand(len(a)) <= 0.7\n",
     "a[mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.3, 0.6, 0.9])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_hat = np.array([[0.1, 0.2, 0.3], [0.4, 0.5, 0.6], [0.7, 0.8, 0.9], [1.0, 1.1, 1.2]])\n",
+    "y = 4\n",
+    "y_hat[np.arange(3), 2]"
    ]
   },
   {
