--- a/assignment_01/Problem_2.ipynb
+++ b/assignment_01/Problem_2.ipynb
@@ -164,14 +164,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b_expanded shape ::  (1, 1, 2)\n",
+      "img shape ::  (1, 8, 8, 1)\n",
+      "img padded shape ::  (1, 8, 8, 1)\n",
       "Received output shape: (1, 4, 4, 2), Expected output shape: (1, 4, 4, 2)\n",
       "Difference:  5.110565335399418e-08\n"
      ]
@@ -237,16 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dimg Error:  9.44187485855556e-09\n",
-      "dw Error:  4.806997972293525e-09\n",
-      "db Error:  9.48588093584782e-11\n",
+      "dimg Error:  4.8764622254221824e-08\n",
+      "dw Error:  1.5343157247311847e-08\n",
+      "db Error:  1.3187747641992463e-10\n",
       "dimg Shape:  (15, 8, 8, 3) (15, 8, 8, 3)\n"
      ]
     }
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -345,19 +346,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dimg Error:  3.2758682558408447e-12\n",
-      "dimg Shape:  (15, 8, 8, 3) (15, 8, 8, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%reload_ext autoreload\n",
     "img = np.random.randn(15, 8, 8, 3)\n",
     "\n",
     "dout = np.random.randn(15, 3, 3, 3)\n",
@@ -366,7 +359,217 @@
     "\n",
     "dimg_num = eval_numerical_gradient_array(lambda x: maxpool.forward(img), img, dout)\n",
     "\n",
-    "out = maxpool.forward(img)\n",
+    "out = maxpool.forward(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dprev shape ::  (15, 3, 3, 3)\n",
+      "dimg shape ::  (15, 8, 8, 3)\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "curr_img_slice shape ::  (4, 4, 3)\n",
+      "mask shape ::  (4, 4, 3)\n",
+      "Test mask\n",
+      "False\n",
+      "dimg Error:  1.0\n",
+      "dimg Shape:  (15, 8, 8, 3) (15, 8, 8, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %reload_ext autoreload\n",
+    "# img = np.random.randn(15, 8, 8, 3)\n",
+    "\n",
+    "# dout = np.random.randn(15, 3, 3, 3)\n",
+    "\n",
+    "# maxpool= MaxPoolingLayer(pool_size=4, stride=2, name=\"maxpool_test\")\n",
+    "\n",
+    "# dimg_num = eval_numerical_gradient_array(lambda x: maxpool.forward(img), img, dout)\n",
+    "\n",
+    "# out = maxpool.forward(img)\n",
+    "%reload_ext autoreload\n",
     "dimg = maxpool.backward(dout)\n",
     "\n",
     "# The error should be around 1e-8\n",
