--- a/assignment_01/Problem_2.ipynb
+++ b/assignment_01/Problem_2.ipynb
@@ -164,15 +164,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "img shape ::  (1, 8, 8, 1)\n",
-      "img padded shape ::  (1, 8, 8, 1)\n",
       "Received output shape: (1, 4, 4, 2), Expected output shape: (1, 4, 4, 2)\n",
       "Difference:  5.110565335399418e-08\n"
      ]
@@ -238,16 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dimg Error:  4.8764622254221824e-08\n",
-      "dw Error:  1.5343157247311847e-08\n",
-      "db Error:  1.3187747641992463e-10\n",
+      "dimg Error:  2.6294797003498437e-07\n",
+      "dw Error:  1.5793360396074264e-08\n",
+      "db Error:  3.029810082779965e-10\n",
       "dimg Shape:  (15, 8, 8, 3) (15, 8, 8, 3)\n"
      ]
     }
@@ -297,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -346,11 +344,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dimg Error:  3.2772667075661996e-12\n",
+      "dimg Shape:  (15, 8, 8, 3) (15, 8, 8, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "%reload_ext autoreload\n",
     "img = np.random.randn(15, 8, 8, 3)\n",
     "\n",
     "dout = np.random.randn(15, 3, 3, 3)\n",
@@ -359,217 +365,7 @@
     "\n",
     "dimg_num = eval_numerical_gradient_array(lambda x: maxpool.forward(img), img, dout)\n",
     "\n",
-    "out = maxpool.forward(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dprev shape ::  (15, 3, 3, 3)\n",
-      "dimg shape ::  (15, 8, 8, 3)\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "curr_img_slice shape ::  (4, 4, 3)\n",
-      "mask shape ::  (4, 4, 3)\n",
-      "Test mask\n",
-      "False\n",
-      "dimg Error:  1.0\n",
-      "dimg Shape:  (15, 8, 8, 3) (15, 8, 8, 3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# %reload_ext autoreload\n",
-    "# img = np.random.randn(15, 8, 8, 3)\n",
-    "\n",
-    "# dout = np.random.randn(15, 3, 3, 3)\n",
-    "\n",
-    "# maxpool= MaxPoolingLayer(pool_size=4, stride=2, name=\"maxpool_test\")\n",
-    "\n",
-    "# dimg_num = eval_numerical_gradient_array(lambda x: maxpool.forward(img), img, dout)\n",
-    "\n",
-    "# out = maxpool.forward(img)\n",
-    "%reload_ext autoreload\n",
+    "out = maxpool.forward(img)\n",
     "dimg = maxpool.backward(dout)\n",
     "\n",
     "# The error should be around 1e-8\n",
@@ -592,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -606,10 +402,10 @@
       "Testing the loss ...\n",
       "Passed!\n",
       "Testing the gradients (error should be no larger than 1e-6) ...\n",
-      "conv_b relative error: 3.90e-09\n",
-      "conv_w relative error: 9.74e-10\n",
-      "fc_b relative error: 8.77e-11\n",
-      "fc_w relative error: 3.83e-07\n"
+      "conv_b relative error: 3.95e-09\n",
+      "conv_w relative error: 9.10e-10\n",
+      "fc_b relative error: 9.76e-11\n",
+      "fc_w relative error: 3.89e-07\n"
      ]
     }
    ],
@@ -710,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -745,25 +541,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-48-3970c7d35cfe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m#############################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m results = train_net(data_dict, model, loss_f, optimizer, batch_size, epochs, \n\u001b[0;32m---> 25\u001b[0;31m                     lr_decay, lr_decay_every, show_every=100, verbose=True)\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0mopt_params\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_hist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_acc_hist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_acc_hist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/media/aditya/DriveTwo/usc/CSCI_566/assignment_01/lib/mlp/train.py\u001b[0m in \u001b[0;36mtrain_net\u001b[0;34m(data, model, loss_func, optimizer, batch_size, max_epochs, lr_decay, lr_decay_every, show_every, verbose)\u001b[0m\n\u001b[1;32m    151\u001b[0m             \u001b[0;31m#############################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m             \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 153\u001b[0;31m             \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss_func\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    154\u001b[0m             \u001b[0mbackward\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss_func\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m             \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/media/aditya/DriveTwo/usc/CSCI_566/assignment_01/lib/mlp/fully_conn.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, feat, is_training, seed)\u001b[0m\n\u001b[1;32m     18\u001b[0m                 \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlayer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_training\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m                 \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlayer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgather_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/media/aditya/DriveTwo/usc/CSCI_566/assignment_01/lib/cnn/layer_utils.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, img)\u001b[0m\n\u001b[1;32m    194\u001b[0m                         \u001b[0;31m# Convolve and store in the output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    195\u001b[0m                         output[i, h, w, ch] = convolve(\n\u001b[0;32m--> 196\u001b[0;31m                             \u001b[0mimg_slice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mw_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mb_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mch\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    197\u001b[0m                         )\n\u001b[1;32m    198\u001b[0m         \u001b[0;31m#############################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/media/aditya/DriveTwo/usc/CSCI_566/assignment_01/lib/cnn/layer_utils.py\u001b[0m in \u001b[0;36mconvolve\u001b[0;34m(slice, W, b)\u001b[0m\n\u001b[1;32m    145\u001b[0m             \"\"\"\n\u001b[1;32m    146\u001b[0m             \u001b[0mslice_dot_w\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mslice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mW\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 147\u001b[0;31m             \u001b[0mslice_sum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mslice_dot_w\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    148\u001b[0m             \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mslice_sum\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36msum\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;32m/media/aditya/DriveTwo/usc/CSCI_566/assignment_01/venv/lib/python3.6/site-packages/numpy/core/fromnumeric.py\u001b[0m in \u001b[0;36msum\u001b[0;34m(a, axis, dtype, out, keepdims, initial, where)\u001b[0m\n\u001b[1;32m   2240\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2241\u001b[0m     return _wrapreduction(a, np.add, 'sum', axis, dtype, out, keepdims=keepdims,\n\u001b[0;32m-> 2242\u001b[0;31m                           initial=initial, where=where)\n\u001b[0m\u001b[1;32m   2243\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2244\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/media/aditya/DriveTwo/usc/CSCI_566/assignment_01/venv/lib/python3.6/site-packages/numpy/core/fromnumeric.py\u001b[0m in \u001b[0;36m_wrapreduction\u001b[0;34m(obj, ufunc, method, axis, dtype, out, **kwargs)\u001b[0m\n\u001b[1;32m     85\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mreduction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mpasskwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mufunc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduce\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mpasskwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Iteration 1 / 700) loss: 2.3023844023146456\n"
      ]
     }
    ],
@@ -783,7 +568,7 @@
     "#############################################################################\n",
     "optimizer =  Adam(model.net, 1e-2)\n",
     "\n",
-    "batch_size = 500\n",
+    "batch_size = 100\n",
     "epochs = 1\n",
     "lr_decay = .999\n",
     "lr_decay_every = 10\n",
@@ -792,7 +577,7 @@
     "#                             END OF YOUR CODE                              #\n",
     "#############################################################################\n",
     "results = train_net(data_dict, model, loss_f, optimizer, batch_size, epochs, \n",
-    "                    lr_decay, lr_decay_every, show_every=100, verbose=True)\n",
+    "                    lr_decay, lr_decay_every, show_every=10, verbose=True)\n",
     "opt_params, loss_hist, train_acc_hist, val_acc_hist = results"
    ]
   },
