--- a/assignment_01/Problem_2.ipynb
+++ b/assignment_01/Problem_2.ipynb
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -694,6 +694,31 @@
     "import pickle\n",
     "with open(\"save.pkl\", \"wb\") as result:\n",
     "  result.write(pickle.dumps(results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'a': 1, 'b': 2}, 2, 3]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load model\n",
+    "import pickle\n",
+    "results_s = None\n",
+    "with open(\"save.pkl\", \"rb\") as result:\n",
+    "  results_s = pickle.load(result)\n",
+    "results_s"
    ]
   },
   {
